<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page.Main2Activity">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.1"
        app:lottie_autoPlay="true"
        app:lottie_fileName="exercise.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/tv_mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mainPageTitle"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <TextView
        android:id="@+id/tv_new1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2020年04月11日16:02:36 支队业务考核"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_new2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_mainTitle" />

    <TextView
        android:id="@+id/tv_new2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2020年04月11日16:02:36 支队业务考核"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_new3"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_new1" />

    <TextView
        android:id="@+id/tv_new3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2020年04月11日16:02:36 支队业务考核"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_main1"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_new2" />

    <Button
        android:id="@+id/btn_main1"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bk_main_btn"
        android:drawableStart="@mipmap/ic_main_tab5"
        android:paddingStart="12dp"
        android:text="@string/mainBtnStr1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_main2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_main2"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:background="@drawable/bk_main_btn"
        android:drawableStart="@mipmap/ic_main_tab3"
        android:paddingStart="12dp"
        android:text="@string/mainBtnStr2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btn_main1"
        app:layout_constraintEnd_toStartOf="@+id/btn_main3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_main1" />

    <Button
        android:id="@+id/btn_main3"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:background="@drawable/bk_main_btn"
        android:drawableStart="@mipmap/ic_main_tab2"
        android:paddingStart="12dp"
        android:text="@string/mainBtnStr3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btn_main1"
        app:layout_constraintEnd_toStartOf="@+id/btn_main4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_main2" />

    <Button
        android:id="@+id/btn_main4"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:background="@drawable/bk_main_btn"
        android:drawableStart="@mipmap/ic_main_tab1"
        android:paddingStart="12dp"
        android:text="@string/mainBtnStr4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btn_main1"
        app:layout_constraintEnd_toStartOf="@+id/btn_main5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_main3" />

    <Button
        android:id="@+id/btn_main5"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:background="@drawable/bk_main_btn"
        android:drawableStart="@mipmap/ic_main_tab4"
        android:paddingStart="12dp"
        android:text="@string/mainBtnStr5"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btn_main1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_main4" />

    <ImageView
        android:id="@+id/iv_banner"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/btn_main1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mainTitle" />

    <ImageView
        android:id="@+id/iv_LoginOut"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:padding="5dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_login_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>